--- a/Day 00/ex02/doft.css
+++ b/Day 00/ex02/doft.css
@@ -146,3 +146,8 @@ html, body {
 .form input.submit {
     margin-left: 5px;
 }
+
+.highlight {
+    border: 3px solid #d42;
+    border-radius: 3px;
+}
